2008-10-13  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/test/test_comptest.py:
	Work around broken Twisted < 2.5.0 trial, which has None as the default
	argument for TestCase.__init__

2008-10-13  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/common/testsuite.py:
	Fix the build by checking for specific function signature instead of
	relying on the Twisted version number, which is not provided in SVN
	Twisted checkouts.

2008-10-13  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/common/testsuite.py:
	Fix the build by supporting Twisted versions < 2.5.0

2008-10-13  Jan Urbanski  <jurbanski@flumotion.com>

	* common/flumotion-trial.in (added):
	* misc/flumotion-trial.in (deleted):
	Move flumotion-trial from misc/ to common/ in roder to have it picked
	up in flumotion-template

	* common/common.mk:
	* common/trial.mk:
	* configure.ac:
	Change the paths to flumotion-trial from misc/ to common/

2008-10-13  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/test/comptest.py:
	* flumotion/test/test_comptest.py:
	Adapt comptest to the recent changes in component initialization
	protocol.
	* flumotion/common/testsuite.py:
	Extend flumotion.common.testsuite.TestCase to allow choosing supported
	reactors for each test case. Running a test case with a reactor that's
	not supported by it will result in a skip.
	* configure.ac:
	* misc/flumotion-trial.in:
	Add a wrapper script for Twisted trial to support an additional
	parameter --saved-coverage. It should point to a file which will store
	intermediate coverage results between consecutive trial runs. For more
	see http://docs.python.org/library/trace.html and the Trace class
	`infile' and `outfile' params.
	* common/common.mk:
	* common/trial.mk:
	Change the `check' and `coverage' make targets to take advantage of the
	new features. There will now be two separate flumotion-trial runs, with
	different reactors, and intermediate coverage results will get stored